# vibe-board

./: .gitignore  AGENTS.md  Cargo.toml  README.md  local-build.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-app.yml  build-tauri-macos.yml  flutter-build.yml  pre-release.yml  publish.yml  tauri-build.yml  test.yml
.husky/: pre-commit
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: config.rs  connection.rs  mod.rs  platform.rs
app/src/api/: client.ts  types.ts  websocket.ts
app/src/lib/: colors.ts  date.ts  platform.ts
app/src/pages/: connect.tsx  home.tsx  project-board.tsx  projects.tsx  settings.tsx  task-detail.tsx
app/src/stores/: app.ts  connections.tsx  theme.tsx  ui.ts
app/src/styles/: index.css  theme.css
assets/scripts/: toast-notification.ps1
crates/api-types/: Cargo.toml
crates/db/: Cargo.toml
crates/db/.sqlx/: query-0c5e71a2394663fa92c714829ee160bebda873a2397f6939a9c3b4320c32f41c.json  (+36 more)
crates/db/src/: lib.rs  (+1 more)
crates/deployment/: Cargo.toml
crates/e2ee-core/: Cargo.toml
crates/e2ee-core/src/: auth.rs  cipher.rs  envelope.rs  error.rs  keys.rs  lib.rs  protocol.rs  sealed_box.rs
crates/e2ee-gateway/: Cargo.toml  build.rs
crates/e2ee-gateway/migrations/: 20260101000000_init.sql  20260102000000_admin_sessions.sql  20260103000000_add_machine_port.sql
crates/e2ee-gateway/src/: auth.rs  config.rs  db.rs  main.rs
crates/e2ee-gateway/src/routes/: auth_routes.rs  frontend.rs  health.rs  machine_routes.rs  mod.rs
crates/e2ee-gateway/src/services/: cli_registry.rs  mod.rs
crates/e2ee-gateway/src/socket/: cli_handler.rs  mod.rs  webui_handler.rs  webui_registry.rs
crates/executors/: Cargo.toml  default_mcp.json
crates/git/: Cargo.toml
crates/local-deployment/: Cargo.toml
crates/review/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/services/: Cargo.toml
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: lib.rs
crates/utils/: Cargo.toml
development/: E2EE.md
docs/: docs.json  e2ee.md  getting-started.mdx  index.mdx  supported-coding-agents.mdx  troubleshooting.mdx
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/cloud/: authentication.mdx  getting-started.mdx  index.mdx  migration.mdx  organizations.mdx  projects.mdx  troubleshooting.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx
docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  reviewing-code-changes.mdx  subtasks.mdx  testing-your-application.mdx
docs/integrations/: azure-repos-integration.mdx  github-integration.mdx  mcp-server-configuration.mdx  vibe-board-mcp-server.mdx  vscode-extension.mdx
docs/remote-access/: e2ee.mdx
docs/settings-beta/: agent-configurations.mdx  general.mdx  index.mdx  mcp-servers.mdx  organization-settings.mdx  projects-repositories.mdx
docs/workspaces/: creating-workspaces.mdx  git-operations.mdx  index.mdx  managing-workspaces.mdx  repositories.mdx  slash-commands.mdx
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: app.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: desktop.json  mobile.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
npx-cli/: README.md  package.json
scripts/: setup-dev-environment.js
shared/: types.ts
shared/schemas/: amp.json  codex.json  copilot.json  cursor_agent.json  droid.json  gemini.json  minion_code.json  mistral_vibe.json  opencode.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tauri-app/: index.html  package.json  tailwind.config.ts  vite.config.ts
tauri-app-frontend/: index.html  package.json  tailwind.config.js
tauri-app-frontend/src/: App.tsx
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-client/src/: App.tsx  main.tsx
tauri-client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri-client/src-tauri/capabilities/: mobile.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/src-tauri/src/: lib.rs  main.rs
(+885 files in other folders)
