[package]
name = "e2ee-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2ee-gateway"
path = "src/main.rs"

[dependencies]
e2ee-core = { path = "../e2ee-core" }
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
rand = "0.8"
