[package]
name = "vibe-board-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.43"
anyhow = "1.0"

[workspace]
# Standalone package, not part of the parent workspace
# This avoids pulling in workspace dependencies (e.g. SSH git deps) during CI builds
